--- a/client/packages/openblocks/src/index.less
+++ b/client/packages/openblocks/src/index.less
@@ -22,6 +22,7 @@ body {
   "Segoe UI Symbol", "Noto Color Emoji";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(245, 245, 246) !important;
 }
 
 code {
